# Ages

./: Battle.h  CMakeLists.txt  ExitWindow.cpp  HandleAcademy.cpp  HandleBarracks.cpp  HandleBarracks.h  HandleBuildings.cpp  HandleBuildings.h  HandleChurch.cpp  HandleChurch.h  HandleFarm.cpp  HandleGame.cpp  HandleGame.h  HandleLumberMill.cpp  HandleLumberMill.h  HandleManu.cpp  HandleManu.h  HandleStonePit.cpp  HandleStonePit.h  HandleTownHall.cpp  HandleTownHall.h  HandleWarehouse.cpp  HandleWindow.h  HandleWoSaving.cpp  README.md  SaveSystem.cpp  SaveSystem.h  Soldier.h  SwordsMen.cpp  SwordsMen.h  Upgrade_tablet.cpp  Upgrade_tablet.h  academy.cpp  barracks.cpp  buildings.cpp  buildings.h  button.cpp  button.h  church.cpp  clickable.cpp  (+19 more)
Textures/: file
headers/: Clickable.h  ExitWindow.h  HandleAcademy.h  HandleBarracks.h  HandleBuildings.h  HandleChurch.h  HandleFarm.h  HandleGame.h  HandleLumberMill.h  HandleManu.h  HandleStonePit.h  HandleTownHall.h  HandleWarehouse.h  HandleWoSaving.h  SaveSystem.h  Soldier.h  SwordsMen.h  Upgrade_tablet.h  archer.h  battle.h  buildings.h  button.h  clickable.h  constants.h  exitwindow.h  handleacademy.h  handlebarracks.h  handlebuildings.h  handlefarm.h  handlegame.h  handlelumbermill.h  handlemenu.h  handletownhall.h  handlewindow.h  handlewosaving.h  heavycavalery.h  label.h  needed.h  obstacle.h  savesystem.h  (+8 more)
src/: Clickable.cpp  ExitWindow.cpp  HandleGame.cpp  HandleManu.cpp  HandleWoSaving.cpp  SaveSystem.cpp  Soldier.cpp  SwordsMen.cpp  Upgrade_tablet.cpp  academy.cpp  archer.cpp  barracks.cpp  buildings.cpp  button.cpp  (+30 more)
(+65 files in other folders)
